--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Site with SWTOR Guides",
   "scripts": {
-    "build": "webpack --mode development"
+    "build": "webpack --mode development",
+    "build-prod": "webpack --mode production"
   },
   "author": "Natalyh <nat@natalyh.tk>",
   "license": "ISC",
